hkust/popl/assignment2/assignment2-package/lab8-package/miniMD2html.output
Grammar

    0 $accept: s $end

    1 s: mddoc

    2 mddoc: %empty
    3      | mddoc paragraph

    4 paragraph: T_NEWLINE
    5          | pcontent T_NEWLINE

    6 pcontent: header
    7         | rftext

    8 header: headermark blanks rftext

    9 headermark: HEADER

   10 rftext: rftext blanks rftextword
   11       | rftext rftextword
   12       | rftextword

   13 rftextword: textnum
   14           | format
   15           | image

   16 image: '!' '[' text ']' '(' text '=' NUMBER '@' NUMBER ')'

   17 format: '*' '*' text '*' '*'
   18       | '_' text '_'
   19       | '*' '*' format '*' '*'
   20       | '_' format '_'

   21 text: text blanks textnum
   22     | text textnum
   23     | textnum

   24 textnum: WORD
   25        | NUMBER

   26 blanks: T_BLANK


Terminals, with rules where they appear

$end (0) 0
'!' (33) 16
'(' (40) 16
')' (41) 16
'*' (42) 17 19
'=' (61) 16
'@' (64) 16
'[' (91) 16
']' (93) 16
'_' (95) 18 20
error (256)
T_BLANK (258) 26
T_NEWLINE (259) 4 5
HEADER (260) 9
WORD (261) 24
NUMBER (262) 16 25


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
s (18)
    on left: 1, on right: 0
mddoc (19)
    on left: 2 3, on right: 1 3
paragraph (20)
    on left: 4 5, on right: 3
pcontent (21)
    on left: 6 7, on right: 5
header (22)
    on left: 8, on right: 6
headermark (23)
    on left: 9, on right: 8
rftext (24)
    on left: 10 11 12, on right: 7 8 10 11
rftextword (25)
    on left: 13 14 15, on right: 10 11 12
image (26)
    on left: 16, on right: 15
format (27)
    on left: 17 18 19 20, on right: 14 19 20
text (28)
    on left: 21 22 23, on right: 16 17 18 21 22
textnum (29)
    on left: 24 25, on right: 13 21 22 23
blanks (30)
    on left: 26, on right: 8 10 21


State 0

    0 $accept: . s $end

    $default  reduce using rule 2 (mddoc)

    s      go to state 1
    mddoc  go to state 2


State 1

    0 $accept: s . $end

    $end  shift, and go to state 3


State 2

    1 s: mddoc .
    3 mddoc: mddoc . paragraph

    T_NEWLINE  shift, and go to state 4
    HEADER     shift, and go to state 5
    WORD       shift, and go to state 6
    NUMBER     shift, and go to state 7
    '!'        shift, and go to state 8
    '*'        shift, and go to state 9
    '_'        shift, and go to state 10

    $default  reduce using rule 1 (s)

    paragraph   go to state 11
    pcontent    go to state 12
    header      go to state 13
    headermark  go to state 14
    rftext      go to state 15
    rftextword  go to state 16
    image       go to state 17
    format      go to state 18
    textnum     go to state 19


State 3

    0 $accept: s $end .

    $default  accept


State 4

    4 paragraph: T_NEWLINE .

    $default  reduce using rule 4 (paragraph)


State 5

    9 headermark: HEADER .

    $default  reduce using rule 9 (headermark)


State 6

   24 textnum: WORD .

    $default  reduce using rule 24 (textnum)


State 7

   25 textnum: NUMBER .

    $default  reduce using rule 25 (textnum)


State 8

   16 image: '!' . '[' text ']' '(' text '=' NUMBER '@' NUMBER ')'

    '['  shift, and go to state 20


State 9

   17 format: '*' . '*' text '*' '*'
   19       | '*' . '*' format '*' '*'

    '*'  shift, and go to state 21


State 10

   18 format: '_' . text '_'
   20       | '_' . format '_'

    WORD    shift, and go to state 6
    NUMBER  shift, and go to state 7
    '*'     shift, and go to state 9
    '_'     shift, and go to state 10

    format   go to state 22
    text     go to state 23
    textnum  go to state 24


State 11

    3 mddoc: mddoc paragraph .

    $default  reduce using rule 3 (mddoc)


State 12

    5 paragraph: pcontent . T_NEWLINE

    T_NEWLINE  shift, and go to state 25


State 13

    6 pcontent: header .

    $default  reduce using rule 6 (pcontent)


State 14

    8 header: headermark . blanks rftext

    T_BLANK  shift, and go to state 26

    blanks  go to state 27


State 15

    7 pcontent: rftext .
   10 rftext: rftext . blanks rftextword
   11       | rftext . rftextword

    T_BLANK  shift, and go to state 26
    WORD     shift, and go to state 6
    NUMBER   shift, and go to state 7
    '!'      shift, and go to state 8
    '*'      shift, and go to state 9
    '_'      shift, and go to state 10

    $default  reduce using rule 7 (pcontent)

    rftextword  go to state 28
    image       go to state 17
    format      go to state 18
    textnum     go to state 19
    blanks      go to state 29


State 16

   12 rftext: rftextword .

    $default  reduce using rule 12 (rftext)


State 17

   15 rftextword: image .

    $default  reduce using rule 15 (rftextword)


State 18

   14 rftextword: format .

    $default  reduce using rule 14 (rftextword)


State 19

   13 rftextword: textnum .

    $default  reduce using rule 13 (rftextword)


State 20

   16 image: '!' '[' . text ']' '(' text '=' NUMBER '@' NUMBER ')'

    WORD    shift, and go to state 6
    NUMBER  shift, and go to state 7

    text     go to state 30
    textnum  go to state 24


State 21

   17 format: '*' '*' . text '*' '*'
   19       | '*' '*' . format '*' '*'

    WORD    shift, and go to state 6
    NUMBER  shift, and go to state 7
    '*'     shift, and go to state 9
    '_'     shift, and go to state 10

    format   go to state 31
    text     go to state 32
    textnum  go to state 24


State 22

   20 format: '_' format . '_'

    '_'  shift, and go to state 33


State 23

   18 format: '_' text . '_'
   21 text: text . blanks textnum
   22     | text . textnum

    T_BLANK  shift, and go to state 26
    WORD     shift, and go to state 6
    NUMBER   shift, and go to state 7
    '_'      shift, and go to state 34

    textnum  go to state 35
    blanks   go to state 36


State 24

   23 text: textnum .

    $default  reduce using rule 23 (text)


State 25

    5 paragraph: pcontent T_NEWLINE .

    $default  reduce using rule 5 (paragraph)


State 26

   26 blanks: T_BLANK .

    $default  reduce using rule 26 (blanks)


State 27

    8 header: headermark blanks . rftext

    WORD    shift, and go to state 6
    NUMBER  shift, and go to state 7
    '!'     shift, and go to state 8
    '*'     shift, and go to state 9
    '_'     shift, and go to state 10

    rftext      go to state 37
    rftextword  go to state 16
    image       go to state 17
    format      go to state 18
    textnum     go to state 19


State 28

   11 rftext: rftext rftextword .

    $default  reduce using rule 11 (rftext)


State 29

   10 rftext: rftext blanks . rftextword

    WORD    shift, and go to state 6
    NUMBER  shift, and go to state 7
    '!'     shift, and go to state 8
    '*'     shift, and go to state 9
    '_'     shift, and go to state 10

    rftextword  go to state 38
    image       go to state 17
    format      go to state 18
    textnum     go to state 19


State 30

   16 image: '!' '[' text . ']' '(' text '=' NUMBER '@' NUMBER ')'
   21 text: text . blanks textnum
   22     | text . textnum

    T_BLANK  shift, and go to state 26
    WORD     shift, and go to state 6
    NUMBER   shift, and go to state 7
    ']'      shift, and go to state 39

    textnum  go to state 35
    blanks   go to state 36


State 31

   19 format: '*' '*' format . '*' '*'

    '*'  shift, and go to state 40


State 32

   17 format: '*' '*' text . '*' '*'
   21 text: text . blanks textnum
   22     | text . textnum

    T_BLANK  shift, and go to state 26
    WORD     shift, and go to state 6
    NUMBER   shift, and go to state 7
    '*'      shift, and go to state 41

    textnum  go to state 35
    blanks   go to state 36


State 33

   20 format: '_' format '_' .

    $default  reduce using rule 20 (format)


State 34

   18 format: '_' text '_' .

    $default  reduce using rule 18 (format)


State 35

   22 text: text textnum .

    $default  reduce using rule 22 (text)


State 36

   21 text: text blanks . textnum

    WORD    shift, and go to state 6
    NUMBER  shift, and go to state 7

    textnum  go to state 42


State 37

    8 header: headermark blanks rftext .
   10 rftext: rftext . blanks rftextword
   11       | rftext . rftextword

    T_BLANK  shift, and go to state 26
    WORD     shift, and go to state 6
    NUMBER   shift, and go to state 7
    '!'      shift, and go to state 8
    '*'      shift, and go to state 9
    '_'      shift, and go to state 10

    $default  reduce using rule 8 (header)

    rftextword  go to state 28
    image       go to state 17
    format      go to state 18
    textnum     go to state 19
    blanks      go to state 29


State 38

   10 rftext: rftext blanks rftextword .

    $default  reduce using rule 10 (rftext)


State 39

   16 image: '!' '[' text ']' . '(' text '=' NUMBER '@' NUMBER ')'

    '('  shift, and go to state 43


State 40

   19 format: '*' '*' format '*' . '*'

    '*'  shift, and go to state 44


State 41

   17 format: '*' '*' text '*' . '*'

    '*'  shift, and go to state 45


State 42

   21 text: text blanks textnum .

    $default  reduce using rule 21 (text)


State 43

   16 image: '!' '[' text ']' '(' . text '=' NUMBER '@' NUMBER ')'

    WORD    shift, and go to state 6
    NUMBER  shift, and go to state 7

    text     go to state 46
    textnum  go to state 24


State 44

   19 format: '*' '*' format '*' '*' .

    $default  reduce using rule 19 (format)


State 45

   17 format: '*' '*' text '*' '*' .

    $default  reduce using rule 17 (format)


State 46

   16 image: '!' '[' text ']' '(' text . '=' NUMBER '@' NUMBER ')'
   21 text: text . blanks textnum
   22     | text . textnum

    T_BLANK  shift, and go to state 26
    WORD     shift, and go to state 6
    NUMBER   shift, and go to state 7
    '='      shift, and go to state 47

    textnum  go to state 35
    blanks   go to state 36


State 47

   16 image: '!' '[' text ']' '(' text '=' . NUMBER '@' NUMBER ')'

    NUMBER  shift, and go to state 48


State 48

   16 image: '!' '[' text ']' '(' text '=' NUMBER . '@' NUMBER ')'

    '@'  shift, and go to state 49


State 49

   16 image: '!' '[' text ']' '(' text '=' NUMBER '@' . NUMBER ')'

    NUMBER  shift, and go to state 50


State 50

   16 image: '!' '[' text ']' '(' text '=' NUMBER '@' NUMBER . ')'

    ')'  shift, and go to state 51


State 51

   16 image: '!' '[' text ']' '(' text '=' NUMBER '@' NUMBER ')' .

    $default  reduce using rule 16 (image)
